<resources>
    <string name="app_name">Library</string>
    <string name="todo">TODO</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Пароль</string>
    <string name="pass_hint_second">Повторите пароль</string>
    <string name="login_btn">Войти</string>
    <string name="login_btn_reg">Регистрация</string>
    <string name="login_show_pass">Показать пароль</string>
    <string name="error_dialog_title">Ошибка!</string>
    <string name="btn_close_error_dialog">Закрыть</string>
    <string name="login_email_error">Email введен в неправильном формате или не введен вообще. Пожалуйста, повторите попытку</string>
    <string name="login_pass_error">Пароль менее 8 символов или не введен вообще. Пожалуйста, повторите попытку</string>
    <string name="login_auth_error">Авторизоваться не удалось.\n Пожалуйста, проверьте email и пароль</string>
    <string name="login_pass_equals_error">Пароли не совпадают. Пожалуйста, повторите попытку</string>
    <string name="registration_error">Регистрация не удалось.\n Пожалуйста, повторите попытку позже</string>
    <string name="registration_timeout_error">К сожалению, время ожидания подтверждения почты, вышло</string>
    <string name="registration_sent_email_success">На указанную вами почту было отправлено письмо, в нем необходимо перейти по ссылке</string>
    <string name="catalog_books_menu">Каталог книг</string>
    <string name="profile_menu">Профиль</string>
    <string name="given_books_menu">Выданные книги</string>
    <string name="stopwatch_menu">Задолжности</string>
    <string name="logout_menu">Выйти</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_profile">Нажмите на фотографию для изменения</string>
    <string name="name_profile">Имя</string>
    <string name="surname_profile">Фамилия</string>
    <string name="phone_profile">Номер телефона</string>
    <string name="save">Сохранить</string>
    <string name="profile_name_error">Имя содержит не только буквы или вы ничего не ввели.\n Пожалуйста, заполните данные верно</string>
    <string name="profile_surname_error">Фамилия содержит не только буквы или вы ничего не ввели.\n Пожалуйста, заполните данные верно</string>
    <string name="profile_phone_error">Введите корректно номер телефона\n Пожалуйста, повторите попытку</string>
    <string name="readers">Читатели</string>
    <string name="settings">Настройки</string>
    <string name="search_title">Поиск по названию книги</string>

    <string name="name_book">Название</string>
    <string name="authors_book">Автор(ы), например Гоголь Н.В.</string>
    <string name="publish_book">Издательство</string>
    <string name="book_name_error">Название книги не введено.\n Пожалуйста, заполните данные верно</string>
    <string name="book_author_error">Автор(ы) книги не введен(ы).\n Пожалуйста, заполните данные верно</string>
    <string name="book_publish_error">Издетельство книги не введено.\n Пожалуйста, заполните данные верно</string>
    <string name="book_quantity_error">Количество экземпляров книги не введено.\n Пожалуйста, заполните данные верно</string>
    <string name="add_book">Добавить</string>
    <string name="add_book_quantity">Количество экземпляров</string>
    <string name="delete_book">Удалить</string>
</resources>