<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_profile"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/skill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextViewProfile" />

        <EditText
            android:id="@+id/nameEditTextProfile"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background"
            android:hint="@string/name_profile"
            android:inputType="textCapSentences"
            android:paddingLeft="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

        <EditText
            android:id="@+id/surnameEditTextProfile"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background"
            android:hint="@string/surname_profile"
            android:inputType="textCapSentences"
            android:paddingLeft="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextProfile" />

        <EditText
            android:id="@+id/phoneEditTextProfile"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background"
            android:hint="@string/phone_profile"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surnameEditTextProfile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButtonProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/button"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>